--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "dependencies": {
     "autoprefixer": "^10.2.4",
     "next": "10.0.6",
+    "notion-api-worker": "^0.1.0",
     "postcss": "^8.2.5",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-notion": "^0.9.3",
     "tailwindcss": "^2.0.3"
   },
   "devDependencies": {
