--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
   },
   "dependencies": {
     "autoprefixer": "^10.2.4",
+    "axios": "^0.21.1",
+    "cheerio": "^1.0.0-rc.5",
+    "isomorphic-unfetch": "^3.1.0",
     "next": "10.0.6",
     "notion-api-worker": "^0.1.0",
     "postcss": "^8.2.5",
+    "querystring": "^0.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-notion": "^0.9.3",
