--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "cheerio": "^1.0.0-rc.5",
     "isomorphic-unfetch": "^3.1.0",
     "next": "10.0.6",
+    "next-themes": "^0.0.10",
     "postcss": "^8.2.5",
     "querystring": "^0.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-notion": "^0.9.3",
+    "react-toggle-dark-mode": "^1.0.3",
     "tailwindcss": "^2.0.3"
   },
   "devDependencies": {
