--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@tailwindcss/forms": "^0.2.1",
+    "@tailwindcss/typography": "^0.4.0",
     "autoprefixer": "^10.2.4",
     "axios": "^0.21.1",
     "cheerio": "^1.0.0-rc.5",
@@ -21,7 +22,9 @@
     "react-dom": "17.0.1",
     "react-notion": "^0.9.3",
     "react-toggle-dark-mode": "^1.0.3",
-    "tailwindcss": "^2.0.3"
+    "tailwindcss": "^2.0.3",
+    "typeface-merriweather": "^1.1.13",
+    "typeface-open-sans": "^1.1.13"
   },
   "devDependencies": {
     "@types/node": "^14.14.25",
