--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "10.0.6",
     "next-themes": "^0.0.10",
     "postcss": "^8.2.5",
+    "prismjs": "^1.23.0",
     "querystring": "^0.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
