--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "base_url": "gokhanarkan.com",
+  "base_url": "https://gokhanarkan.com",
   "site_title": "Gökhan Arkan",
   "site_description": "Personal landing page and blog of Gökhan Arkan.",
   "site_keywords": [
