--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "typeface-open-sans": "^1.1.13"
   },
   "devDependencies": {
+    "@types/gtag.js": "^0.0.4",
     "@types/node": "^14.14.25",
     "@types/react": "^17.0.1",
     "typescript": "^4.1.3"
