--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tailwindcss/typography": "^0.4.0",
     "autoprefixer": "^10.2.4",
     "axios": "^0.21.1",
+    "babel-plugin-prismjs": "^2.0.1",
     "cheerio": "^1.0.0-rc.5",
     "isomorphic-unfetch": "^3.1.0",
     "next": "10.0.6",
