--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "17.0.1",
     "react-notion": "^0.9.3",
     "react-toggle-dark-mode": "^1.0.3",
+    "swr": "^0.5.5",
     "tailwindcss": "^2.0.3",
     "typeface-merriweather": "^1.1.13",
     "typeface-open-sans": "^1.1.13"
