--- a/package.json
+++ b/package.json
@@ -12,23 +12,23 @@
     "@heroicons/react": "^1.0.5",
     "@tailwindcss/forms": "^0.2.1",
     "@tailwindcss/typography": "^0.4.0",
-    "autoprefixer": "^10.2.4",
-    "axios": "^0.21.1",
+    "autoprefixer": "^10.4.0",
+    "axios": "^0.24.0",
     "babel-plugin-prismjs": "^2.0.1",
     "cheerio": "^1.0.0-rc.5",
     "ioredis": "^4.27.9",
     "isomorphic-unfetch": "^3.1.0",
-    "next": "10.0.6",
+    "next": "^12.0.1",
     "next-themes": "^0.0.10",
-    "postcss": "^8.2.10",
-    "prismjs": "^1.23.0",
+    "postcss": "^8.3.11",
+    "prismjs": "^1.25.0",
     "querystring": "^0.2.0",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-notion": "^0.9.3",
-    "react-toggle-dark-mode": "^1.0.3",
-    "swr": "^0.5.5",
-    "tailwindcss": "^2.0.3",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-notion": "^0.10.0",
+    "react-toggle-dark-mode": "^1.0.4",
+    "swr": "^1.0.1",
+    "tailwindcss": "^2.2.17",
     "typeface-merriweather": "^1.1.13",
     "typeface-open-sans": "^1.1.13"
   },
@@ -36,6 +36,6 @@
     "@types/gtag.js": "^0.0.4",
     "@types/node": "^14.14.25",
     "@types/react": "^17.0.1",
-    "typescript": "^4.1.3"
+    "typescript": "^4.4.4"
   }
 }
