--- a/package.json
+++ b/package.json
@@ -18,13 +18,13 @@
     "cheerio": "^1.0.0-rc.5",
     "ioredis": "^4.27.9",
     "isomorphic-unfetch": "^3.1.0",
-    "next": "^12.0.1",
+    "next": "12",
     "next-themes": "^0.0.10",
     "postcss": "^8.3.11",
     "prismjs": "^1.25.0",
     "querystring": "^0.2.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "react-notion": "^0.10.0",
     "react-toggle-dark-mode": "^1.0.4",
     "swr": "^1.0.1",
